went back to original icon color

--- a/client/app/ggcIcon/ggcIcon.css
+++ b/client/app/ggcIcon/ggcIcon.css
@@ -13,8 +13,8 @@
   }*/
 }
 .iconGroup {
-  fill: #46dada;
-  stroke: #28c5c5;
+  fill: #e2edeb;
+  stroke: #c3d9d5;
 }
 .iconGroup.energy {
   fill: #4e4efc;
