--- a/client/app/playerPanel/playerPanel.css
+++ b/client/app/playerPanel/playerPanel.css
@@ -6,7 +6,7 @@
 .tab-title {
   font-family: 'eurostile-condensed';
   text-shadow: 0 0 10px rgba(255, 255, 255, 0.9), -2px 4px 4px black;
-  color: #21ffff;
+  color: #d6f9f2;
 }
 .tab-body {
   font-family: 'eurostile-condensed';
