--- a/client/app/vars.less
+++ b/client/app/vars.less
@@ -1,8 +1,8 @@
 @economy-color: #fca204;
 @environment-color: #2fd418;
 @energy-color: #4e4efc;
-//@light-blue: #E2EDEB;
-@light-blue: #46dada;
+@light-blue: #E2EDEB;
+//@light-blue: #46dada;
 @teal:#049591;
 
 
