--- a/client/app/game/game.css
+++ b/client/app/game/game.css
@@ -3,8 +3,10 @@
   width: 30%;
   height: 100%;
   float: left;
-  margin-right: 5%;
-  margin-left: 0%;
+  margin-right: 0%;
+  margin-left: 5%;
+  margin-top:8%;
+  z-index:999;
 }
 /*TODO(Ryan) explain these changes, make flex-box-y mixin*/
 #box-wrap-inner {
@@ -17,6 +19,7 @@
   -webkit-align-content: center;
   -webkit-box-align: center;
   -webkit-align-items: center;
+  z-index:999;
 }
 .scenario-card {
   -webkit-transition: 1s all;
@@ -30,7 +33,9 @@
   margin: 10px;
   transform-style: preserve-3d;
   margin-left: 0;
-  background: url("../../svg/infoPanel.svg") 50% 50% no-repeat;
+  background: url("../../svg/infoPanel.svg") no-repeat  center ;
+  background-size: 580px 850px;
+  z-index:999;
 }
 .scenario-card:nth-of-type(1) {
   transform: perspective(1000px) rotateY(25deg) translate(50px);
@@ -67,6 +72,7 @@ div#main {
   width: 1920px;
   height: 1080px;
   background: url("../../bmp/gulfbrown.jpg") no-repeat;
+  background-size: 1920px 1200px;
 }
 div#perspective_plane_container {
   position: absolute;
@@ -204,7 +210,8 @@ div#borderscrim {
   position: absolute;
 }
 div#mapA {
-  background-image: url('../../bmp/currentpop.png');
+  background-image: url('../../bmp/overPop.png');
+  background-size: 1920px 1200px;
 }
 div#borderscrim {
   background-image: url('../../bmp/borderandscrim.png');
