added flex mixin

--- a/client/app/vars.less
+++ b/client/app/vars.less
@@ -68,3 +68,13 @@
     text-shadow: 0 0 10px fade(white,90), -2px 4px 4px black;
   }
 }
+
+#flex{
+
+  &.vertical-center{
+    display:flex;
+    align-items: center;
+  }
+}
+
+
