--- a/client/app/game/game.css
+++ b/client/app/game/game.css
@@ -15,8 +15,6 @@
 .scenario-header {
   text-shadow: 0 0 10px rgba(255, 255, 255, 0.9), -2px 4px 4px black;
 }
-
-
 .scenario-card {
   -webkit-transition: 1s all;
   -webkit-flex: auto;
@@ -32,6 +30,25 @@
 }
 .scenario-card.invisible {
   opacity: 0;
+}
+.city {
+  position: absolute;
+  background: url(../../svg/citycornerL.svg) -10px -11.11111111px no-repeat;
+  font-family: "Eurostile-Condensed";
+  color: white;
+  font-size: 14px;
+  padding: .4em .4em;
+  letter-spacing: 1px;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.84);
+}
+#tampa.city {
+  background: url(../../svg/citycornerR.svg) 64px -11.11111111px no-repeat;
+}
+img#highways {
+  position: absolute;
+  width: 70.5%;
+  top: 2.5%;
+  left: 18.35%;
 }
 .scenario-card:nth-of-type(1) {
   transform: perspective(1000px) rotateY(25deg) translate(50px);
@@ -55,14 +72,14 @@
 @font-face {
   font-family: '232MKB';
   src: url('../../assets/fonts/232MKSD_winTT/232MKB__.TTF') format('truetype');
-
+  
   /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
   /*src: url('../fonts/232MKSD_winTT/232MKM__.TTF') format('truetype');  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
 @font-face {
   font-family: '232MKUL';
   src: url('../../assets/fonts/232MKSD_winTT/232MKUL_.TTF') format('truetype');
-
+  
   /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
   /*src: url('../fonts/232MKSD_winTT/232MKM__.TTF') format('truetype');  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
@@ -216,7 +233,7 @@ div.panelOuterenergy {
   display: flex;
   align-items: center;
 }
-div#mapA,
+/*div#mapA,
 div#mapB,
 div#borderscrim {
   width: 1920px;
@@ -226,6 +243,29 @@ div#borderscrim {
 div#mapA {
   background-image: url('../../bmp/overPop.png');
   background-size: 1920px 1200px;
+}*/
+#mapA,
+#mapB,
+#mapC,
+#foulGulf,
+#landmarks,
+#borderscrim {
+  width: 1920px;
+  height: 1080px;
+  position: absolute;
+}
+#foulGulf {
+  /*background: -webkit-linear-gradient(top, #2F2727, #1a82f7);*/
+  background: url(../bmp/gulfbrown.jpg) 50% 0% no-repeat;
+}
+#mapA {
+  background: url(../../bmp/currentpop.png) 50% 0% no-repeat;
+}
+#mapB {
+  background: url(../../bmp/midpop.png) 50% 0% no-repeat;
+}
+#mapC {
+  background: url(../../bmp/overpop.png) 50% 0% no-repeat;
 }
 div#borderscrim {
   background-image: url('../../bmp/borderandscrim.png');
