--- a/client/app/playerPanel/playerPanel.less
+++ b/client/app/playerPanel/playerPanel.less
@@ -35,11 +35,20 @@ p.tab-body {
 }
 
 .btn-icon {
-  background:url("../../svg/buttonOL.svg") 50% 50% no-repeat;
-  width:100px;
-  height:50px;
-  padding:35px;
-  margin:10px;
+  background: url("../../svg/buttonOL.svg") 50% 50% no-repeat;
+  width: 100px;
+  height: 50px;
+  padding: 35px;
+  margin: 10px;
+  transition: 0.25s linear all;
+}
+.btn-icon.ng-hide-add, .my-element.ng-hide-remove {
+  transition: 0.25s linear all;
+}
+.btn-icon.ng-hide {
+  display: inline!important;
+  opacity:0;
+  -webkit-transform: rotate(180deg);
 }
 
 .environment{
