changed bg images in game.less

--- a/client/app/game/game.less
+++ b/client/app/game/game.less
@@ -272,7 +272,7 @@ div#mapA {
 
 
 div#borderscrim {
-  background-image: url('../../bmp/borderandscrim.png');
+  background-image: url('../../bmp/borderandscrim_wrn.png');
   z-index: 8;
   pointer-events: none;
 }
