--- a/client/app/game/game.css
+++ b/client/app/game/game.css
@@ -12,19 +12,6 @@
   -webkit-align-items: center;
   z-index: 20;
 }
-#btn-wrap-inner {
-  height: 100%;
-  width: 100%;
-  display: -webkit-box;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: row;
-  -webkit-box-pack: center;
-  -webkit-align-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  z-index: 20;
-  display: flex;
-}
 .scenario-header {
   text-shadow: 0 0 10px rgba(255, 255, 255, 0.9), -2px 4px 4px black;
 }
@@ -85,14 +72,14 @@ img#highways {
 @font-face {
   font-family: '232MKB';
   src: url('../../assets/fonts/232MKSD_winTT/232MKB__.TTF') format('truetype');
-
+  
   /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
   /*src: url('../fonts/232MKSD_winTT/232MKM__.TTF') format('truetype');  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
 @font-face {
   font-family: '232MKUL';
   src: url('../../assets/fonts/232MKSD_winTT/232MKUL_.TTF') format('truetype');
-
+  
   /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
   /*src: url('../fonts/232MKSD_winTT/232MKM__.TTF') format('truetype');  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
@@ -173,42 +160,42 @@ div.panelInnerEnergy {
 }
 .panelOuterenvironment.retract {
   left: 300px;
-  top: 870px;
+  top: 810px;
   -webkit-transform: rotateZ(29deg);
   transition: all 0.2s ease-in-out;
 }
 div.panelOutereconomy {
   left: 775px;
-
-  top: 885px;
+  /*top:800px;*/
+  top: 825px;
   transition: all 0.2s ease-in-out;
 }
 .panelOutereconomy.retract {
   left: 775px;
-
-  top: 990px;
+  /*top:800px;*/
+  top: 930px;
   transition: all 0.2s ease-in-out;
 }
 .panelOuterenergy.retract {
   right: 310px;
-  top: 875px;
+  top: 815px;
   -webkit-transform: rotateZ(-29deg);
   transition: all 0.2s ease-in-out;
 }
 div.panelOuterenvironment {
   left: 400px;
-  top: 700px;
+  top: 640px;
   -webkit-transform: rotateZ(29deg);
   transition: all 0.2s ease-in-out;
 }
 div.panelOutereconomy {
   left: 775px;
-  top: 793px;
+  top: 733px;
   transition: all 0.2s ease-in-out;
 }
 div.panelOuterenergy {
   right: 395px;
-  top: 695px;
+  top: 635px;
   -webkit-transform: rotateZ(-29deg);
   transition: all 0.2s ease-in-out;
 }
@@ -281,7 +268,7 @@ div#mapA {
   background: url(../../bmp/overpop.png) 50% 0% no-repeat;
 }
 div#borderscrim {
-  background-image: url('../../bmp/borderandscrim.png');
+  background-image: url('../../bmp/borderandscrim_wrn.png');
   z-index: 8;
   pointer-events: none;
 }
