less-i-fied panel css

--- a/client/app/playerPanel/playerPanel.css
+++ b/client/app/playerPanel/playerPanel.css
@@ -106,7 +106,7 @@ top:220px;*/
 .panelInnerenvironment .extended,
 .panelInnereconomy .extended,
 .panelInnerenergy .extended {
-  top: 0px;
+  top: 0;
 }
 @font-face {
   font-family: '232MKB';
@@ -131,26 +131,15 @@ div.bottomPlane {
 }
 div.topPlane {
   /*border:white solid 1px;*/
-  background: url("../../svg/paneltop_n.svg") 50% 0% no-repeat;
+  background: url("../../svg/paneltop_n.svg") 50% 0 no-repeat;
   -webkit-transform: translateZ(25px);
   /* Chrome, Safari, Opera */
 }
 div.bottomPlane {
   /*border:blue solid 1px;*/
-  background: url("../../svg/panelbottom_n.svg") 50% 0% no-repeat;
+  background: url("../../svg/panelbottom_n.svg") 50% 0 no-repeat;
   -webkit-transform: translateZ(10px);
   /* Chrome, Safari, Opera */
-}
-div.panelOuterenvironment,
-div.panelOutereconomy,
-div.panelOuterenergy {
-  position: absolute;
-  width: 375px;
-  height: 300px;
-  -webkit-transform-style: preserve-3d;
-  z-index: 10;
-  overflow: hidden;
-  transition: all 0.2s ease-in-out;
 }
 div.panelInnerEnvironment,
 div.panelInnerEconomy,
@@ -161,16 +150,53 @@ div.panelInnerEnergy {
   -webkit-transform-style: preserve-3d;
   transition: all 0.2s ease-in-out;
 }
+.panelOuter {
+  position: absolute;
+  width: 375px;
+  height: 300px;
+  -webkit-transform-style: preserve-3d;
+  z-index: 10;
+  overflow: hidden;
+  transition: all 0.2s ease-in-out;
+}
+.panelOuter.environment {
+  left: 400px;
+  top: 700px;
+  -webkit-transform: rotateZ(29deg);
+  transition: all 0.2s ease-in-out;
+}
+.panelOuter.environment .retract {
+  left: 300px;
+  top: 870px;
+  -webkit-transform: rotateZ(29deg);
+  transition: all 0.2s ease-in-out;
+}
+.panelOuter.economy {
+  left: 775px;
+  top: 793px;
+  transition: all 0.2s ease-in-out;
+}
+.panelOuter.economy .retract {
+  left: 775px;
+  top: 990px;
+  transition: all 0.2s ease-in-out;
+}
+.panelOuter.energy {
+  right: 395px;
+  top: 695px;
+  -webkit-transform: rotateZ(-29deg);
+  transition: all 0.2s ease-in-out;
+}
+.panelOuter.energy.retract {
+  right: 310px;
+  top: 875px;
+  -webkit-transform: rotateZ(-29deg);
+  transition: all 0.2s ease-in-out;
+}
 .panelOuterenvironment.retract {
   left: 300px;
   top: 810px;
   -webkit-transform: rotateZ(29deg);
-  transition: all 0.2s ease-in-out;
-}
-div.panelOutereconomy {
-  left: 775px;
-  /*top:800px;*/
-  top: 825px;
   transition: all 0.2s ease-in-out;
 }
 .panelOutereconomy.retract {
