--- a/client/app/playerPanel/playerPanel.less
+++ b/client/app/playerPanel/playerPanel.less
@@ -82,9 +82,7 @@ p.tab-body {
 /*.panelOuterenvironment .colorbar { background:#2fd418; }
 .panelOutereconomy .colorbar { background:#fca204; }
 .panelOuterenergy .colorbar { background:#4e4efc; } */
-.panelOuterenvironment h3 { border:#c8e893 solid 1px; color:#c8e893; text-shadow: 0 0 3px #c8e893; }
-.panelOutereconomy h3 { border:#fbcd6d solid 1px; color:#fbcd6d; }
-.panelOuterenergy h3 { border:#a8aefa solid 1px; color:#a8aefa; }
+
 
 
 .vote-buttons {
@@ -171,6 +169,19 @@ div.panelInnerEnergy {
   transition: all 0.2s ease-in-out;
 }
 
+.panelOuterenvironment h3 { border:#c8e893 solid 1px;
+  color:#c8e893;
+  text-shadow: 0 0 3px #c8e893; }
+.panelOutereconomy h3 { border:#fbcd6d solid 1px; color:#fbcd6d; }
+.panelOuterenergy h3 { border:#a8aefa solid 1px; color:#a8aefa; }
+
+.colorbarText(@color){
+  @textColor: lighten(desaturate(@color, 30),18);
+  color: @textColor;
+  border: @textColor solid 1px;
+  text-shadow: 0 0 2px black;
+}
+
 .panelOuter{
   position: absolute;
   width: 375px;
@@ -191,6 +202,16 @@ div.panelInnerEnergy {
       -webkit-transform: rotateZ(29deg);
       transition: all 0.2s ease-in-out;
     }
+
+    & h3{
+      .colorbarText(@environment-color);
+    }
+    & i,a{
+      .text-environment;
+    }
+    & .colorbar{
+      .bg-environment;
+    }
   }
   &.economy{
     left: 775px;
@@ -200,6 +221,16 @@ div.panelInnerEnergy {
       left: 775px;
       top: 990px;
       transition: all 0.2s ease-in-out;
+    }
+
+    & h3{
+      .colorbarText(@economy-color);
+    }
+    & i,a{
+      .text-economy;
+    }
+    & .colorbar{
+      .bg-economy;
     }
   }
   &.energy{
@@ -212,6 +243,16 @@ div.panelInnerEnergy {
       top: 875px;
       -webkit-transform: rotateZ(-29deg);
       transition: all 0.2s ease-in-out;
+    }
+
+    & h3{
+      .colorbarText(@energy-color);
+    }
+    & i,a{
+      .text-energy;
+    }
+    & .colorbar{
+      .bg-energy;
     }
   }
 
