--- a/client/app/playerPanel/playerPanel.less
+++ b/client/app/playerPanel/playerPanel.less
@@ -42,6 +42,8 @@ p.tab-body {
   padding: 35px;
   margin: 10px;
   transition: 0.25s linear all;
+  position: relative;
+  top: 90px;
 }
 .btn-icon.ng-hide-add, .my-element.ng-hide-remove {
   transition: 0.25s linear all;
@@ -86,11 +88,11 @@ p.tab-body {
 
 
 
-.vote-buttons {
-  position:absolute;
-  left:15%;
-  top:47%;
-}
+//.vote-buttons {
+//  position:absolute;
+//  left:15%;
+//  top:47%;
+//}
 
 .tab-img-vote {
   height:30%;
@@ -279,4 +281,23 @@ div.panelInnerEnergy {
   font-stretch: expanded;
   padding-top: 1px;
   font-family: "232MKSD", Helvetica, Arial, sans-serif;
+}
+
+
+.ggc-btn-wrap{
+  width: 100%;
+  height: 50%;
+  //background-color: blue;
+  position: absolute;
+  left: 0;
+  top: 100px;
+  padding: 5%;
+}
+
+.ggc-btn{
+  box-sizing: border-box;
+  height:0;
+  padding-bottom: 100%;
+//  background:red;
+  width:100%;
 }
