--- a/client/app/playerPanel/playerPanel.less
+++ b/client/app/playerPanel/playerPanel.less
@@ -48,7 +48,7 @@ p.tab-body {
   padding: 35px;
   margin: 10px;
 
-  transition: 0.25s linear all;
+  //transition: 0.25s linear all;
   position: relative;
   top: 90px;
 
