--- a/client/app/app.less
+++ b/client/app/app.less
@@ -18,7 +18,11 @@ h1,h2,h3,h4,h5,h6{
     padding: 0.2em 0;
 }
 
-
+html{
+  width: 1920px;
+  height:1920px;
+  overflow: hidden;
+}
 
 
 .navbar-default form {
