--- a/client/app/game/game.css
+++ b/client/app/game/game.css
@@ -24,12 +24,20 @@
   background-size: 580px 850px;
   color: white;
   padding: 20px;
+  padding-left: 30px;
   margin: 10px;
   transform-style: preserve-3d;
   margin-left: 0;
 }
 .scenario-card.invisible {
   opacity: 0;
+}
+.scenario-card h1,
+.scenario-card h2,
+.scenario-card h3,
+.scenario-card h4 {
+  letter-spacing: 3px;
+  text-transform: capitalize;
 }
 .city {
   position: absolute;
@@ -54,6 +62,12 @@ img#highways {
   transform: perspective(1000px) rotateY(25deg) translate(50px);
   /*use translate or margin, not both*/
 }
+.scenario-card:nth-of-type(1) h1,
+.scenario-card:nth-of-type(1) h2,
+.scenario-card:nth-of-type(1) h3,
+.scenario-card:nth-of-type(1) h4 {
+  text-shadow: 0 0 8px rgba(255, 255, 255, 0.9), -2px 2px 2px black;
+}
 .scenario-card:nth-of-type(1).invisible {
   transform: perspective(1000px) rotateY(-90deg) translate(-550px);
 }
@@ -62,6 +76,12 @@ img#highways {
 }
 .scenario-card:nth-of-type(2) {
   transform: perspective(1000px) rotateY(-25deg) translate(-50px);
+}
+.scenario-card:nth-of-type(2) h1,
+.scenario-card:nth-of-type(2) h2,
+.scenario-card:nth-of-type(2) h3,
+.scenario-card:nth-of-type(2) h4 {
+  text-shadow: 0 0 8px rgba(255, 255, 255, 0.9), 2px 2px 2px black;
 }
 .scenario-card:nth-of-type(2).invisible {
   transform: perspective(1000px) rotateY(90deg) translate(550px);
@@ -127,7 +147,7 @@ div#perspective_plane {
   height: 100%;
 }
 .main-row {
-  height: 100%;
+  height: 80%;
   display: flex;
   align-items: center;
 }
