--- a/client/app/vars.less
+++ b/client/app/vars.less
@@ -67,6 +67,15 @@
   &.panel{
     text-shadow: 0 0 10px fade(white,90), -2px 4px 4px black;
   }
+  &.card{
+    &.left{
+      text-shadow: 0 0 8px fade(white,90), -2px 2px 2px black;
+    }
+    &.right{
+      text-shadow: 0 0 8px fade(white,90), 2px 2px 2px black;
+    }
+
+  }
 }
 
 #flex{
