--- a/client/app/game/game.css
+++ b/client/app/game/game.css
@@ -23,8 +23,7 @@
   background: url("../../svg/infoPanel.svg") no-repeat center;
   background-size: 580px 850px;
   color: white;
-  padding: 20px;
-  padding-left: 30px;
+  padding: 0 20px 0 30px;
   margin: 10px;
   transform-style: preserve-3d;
   margin-left: 0;
@@ -108,6 +107,18 @@ body {
   height: 1080px;
   margin: 0;
 }
+div#ui-main {
+  position: relative;
+  height: 33%;
+  top: 29%;
+}
+div#ui-main .title {
+  line-height: 0;
+  font-size: 4em;
+  font-variant: small-caps;
+  color: #e2edeb;
+  text-shadow: 0 0 10px rgba(255, 255, 255, 0.9), -2px 4px 4px black;
+}
 div#main {
   position: absolute !important;
   top: 0px;
@@ -115,6 +126,7 @@ div#main {
   height: 1080px;
   background: url("../../bmp/gulfbrown.jpg") no-repeat;
   background-size: 1920px 1200px;
+  overflow: hidden;
 }
 div#perspective_plane_container {
   position: absolute;
