--- a/client/app/game/game.css
+++ b/client/app/game/game.css
@@ -15,6 +15,9 @@
 .scenario-header {
   text-shadow: 0 0 10px rgba(255, 255, 255, 0.9), -2px 4px 4px black;
 }
+.invisible {
+  opacity: 0;
+}
 .scenario-card {
   -webkit-transition: 1s all;
   -webkit-flex: auto;
