--- a/client/app/game/game.less
+++ b/client/app/game/game.less
@@ -22,6 +22,7 @@
 
 .scenario-header {
   #textShadow.panel;
+
 }
 .invisible{
   opacity: 0;
@@ -43,6 +44,11 @@
   margin: 10px;
   transform-style: preserve-3d;
   margin-left: 0;
+
+  & .mainBar {
+    border-radius: 15px;
+    padding:10px;
+  }
 
   &.invisible{
     opacity: 0;
