better color bars

--- a/client/app/game/game.less
+++ b/client/app/game/game.less
@@ -37,7 +37,7 @@
   background: url("../../svg/infoPanel.svg") no-repeat  center ;
   background-size: 580px 850px;
   color: white;
-
+  
 
   padding: 0 20px 0 30px;
 
@@ -48,6 +48,8 @@
   & .mainBar {
     border-radius: 15px;
     padding:10px;
+    opacity:0.75;
+    #boxShadow.mainBar;
   }
 
   &.invisible{
@@ -179,7 +181,7 @@ div#perspective_plane {
 }
 
 .main-row {
-  height: 80%;
+  height: 65%;
   #flex.vertical-center;
 }
 
