--- a/client/app/game/game.css
+++ b/client/app/game/game.css
@@ -34,6 +34,8 @@
 .scenario-card .mainBar {
   border-radius: 15px;
   padding: 10px;
+  opacity: 0.75;
+  -webkit-box-shadow: 0px 2px 8px 2px rgba(250, 250, 250, 0.5);
 }
 .scenario-card.invisible {
   opacity: 0;
@@ -166,7 +168,7 @@ div#perspective_plane {
   height: 100%;
 }
 .main-row {
-  height: 80%;
+  height: 65%;
   display: flex;
   align-items: center;
 }
