--- a/client/app/vars.less
+++ b/client/app/vars.less
@@ -24,6 +24,7 @@
 }
 
 
+
 .text-environment{
   color: @environment-color;
 }
@@ -75,6 +76,12 @@
       text-shadow: 0 0 8px fade(white,90), 2px 2px 2px black;
     }
 
+  }
+}
+
+#boxShadow{
+  & .mainBar{
+    -webkit-box-shadow: 0px 2px 8px 2px rgba(250,250,250,0.5);
   }
 }
 
