--- a/client/app/game/game.css
+++ b/client/app/game/game.css
@@ -125,8 +125,19 @@ div#ui-main .title {
   line-height: 0;
   font-size: 4em;
   font-variant: small-caps;
+  margin-left: -35px;
   color: #e2edeb;
   text-shadow: 0 0 10px rgba(255, 255, 255, 0.9), -2px 4px 4px black;
+}
+div#ui-main .title .titleText {
+  transition: .5s linear all;
+}
+div#ui-main .title .titleText.ng-enter {
+  opacity: 1;
+}
+div#ui-main .title .titleText.ng-hide {
+  opacity: 0;
+  width: 0px;
 }
 div#main {
   position: absolute !important;
