cleaning up card title animation

--- a/client/app/game/game.css
+++ b/client/app/game/game.css
@@ -116,6 +116,9 @@ body {
   height: 1080px;
   margin: 0;
 }
+.main-title {
+  height: 25px;
+}
 div#ui-main {
   position: relative;
   height: 33%;
@@ -128,16 +131,18 @@ div#ui-main .title {
   margin-left: -35px;
   color: #e2edeb;
   text-shadow: 0 0 10px rgba(255, 255, 255, 0.9), -2px 4px 4px black;
-}
-div#ui-main .title .titleText {
+  -webkit-transition: 1s all;
+  opacity: 1;
+  height: 25px;
   transition: .5s linear all;
 }
-div#ui-main .title .titleText.ng-enter {
+div#ui-main .title.ng-enter {
   opacity: 1;
+  height: 25px;
 }
-div#ui-main .title .titleText.ng-hide {
+div#ui-main .title.ng-hide {
   opacity: 0;
-  width: 0px;
+  height: 0;
 }
 div#main {
   position: absolute !important;
