--- a/client/app/game/game.css
+++ b/client/app/game/game.css
@@ -31,12 +31,6 @@
   transform-style: preserve-3d;
   margin-left: 0;
 }
-.scenario-card .mainBar {
-  border-radius: 15px;
-  padding: 10px;
-  opacity: 0.75;
-  -webkit-box-shadow: 0px 2px 8px 2px rgba(250, 250, 250, 0.5);
-}
 .scenario-card.invisible {
   opacity: 0;
 }
@@ -46,10 +40,32 @@
 .scenario-card h4 {
   letter-spacing: 3px;
   text-transform: capitalize;
+  border-radius: .8em;
+  padding: 10px;
+  border: 1px solid #223333;
+  line-height: 1.2em;
+  color: white;
+}
+.scenario-card h1.energy,
+.scenario-card h2.energy,
+.scenario-card h3.energy,
+.scenario-card h4.energy {
+  background-color: #6060ea;
+}
+.scenario-card h1.economy,
+.scenario-card h2.economy,
+.scenario-card h3.economy,
+.scenario-card h4.economy {
+  background-color: #e39b1d;
+}
+.scenario-card h1.environment,
+.scenario-card h2.environment,
+.scenario-card h3.environment,
+.scenario-card h4.environment {
+  background-color: #41bc30;
 }
 .city {
   position: absolute;
-  background: url(../../svg/citycornerL.svg) -12px -11.11111111px no-repeat;
   font-family: "Eurostile-Condensed";
   color: white;
   font-size: 14px;
@@ -57,8 +73,23 @@
   letter-spacing: 1px;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.84);
 }
+.city:before {
+  position: relative;
+  top: -10px;
+  content: "\25F8";
+  margin-top: 20px;
+}
+.city.leftlabel:before {
+  content: "";
+}
+.city.leftlabel:after {
+  position: relative;
+  top: -10px;
+  content: "\25F9";
+  margin-top: 20px;
+}
 #tampa.city {
-  background: url(../../svg/citycornerR.svg) 64px -11.11111111px no-repeat;
+  /*background:url(../../svg/citycornerR.svg) 64px -10px /.9em no-repeat; */
 }
 img#highways {
   position: absolute;
@@ -74,7 +105,8 @@ img#highways {
 .scenario-card:nth-of-type(1) h2,
 .scenario-card:nth-of-type(1) h3,
 .scenario-card:nth-of-type(1) h4 {
-  text-shadow: 0 0 8px rgba(255, 255, 255, 0.9), -2px 2px 2px black;
+  text-shadow: 0 0 4px rgba(255, 255, 255, 0.5), -2px 2px 2px black;
+  -webkit-box-shadow: -1px 1px 4px rgba(255, 255, 255, 0.2), 1px -1px 4px #223333;
 }
 .scenario-card:nth-of-type(1).invisible {
   transform: perspective(1000px) rotateY(-90deg) translate(-550px);
@@ -89,7 +121,8 @@ img#highways {
 .scenario-card:nth-of-type(2) h2,
 .scenario-card:nth-of-type(2) h3,
 .scenario-card:nth-of-type(2) h4 {
-  text-shadow: 0 0 8px rgba(255, 255, 255, 0.9), 2px 2px 2px black;
+  text-shadow: 0 0 4px #ffffff, 2px 2px 2px black;
+  -webkit-box-shadow: 1px 1px 4px rgba(255, 255, 255, 0.2), -1px -1px 4px #223333;
 }
 .scenario-card:nth-of-type(2).invisible {
   transform: perspective(1000px) rotateY(90deg) translate(550px);
