--- a/client/app/vars.less
+++ b/client/app/vars.less
@@ -2,6 +2,7 @@
 @environment-color: #2fd418;
 @energy-color: #4e4efc;
 @light-blue: #E2EDEB;
+@blue-black: #233;
 //@light-blue: #46dada;
 @teal:#049591;
 
@@ -67,22 +68,25 @@
 #textShadow{
   &.panel{
     text-shadow: 0 0 10px fade(white,90), -2px 4px 4px black;
+
   }
   &.card{
     &.left{
-      text-shadow: 0 0 8px fade(white,90), -2px 2px 2px black;
+      text-shadow: 0 0 4px fade(white,50), -2px 2px 2px black;
+      -webkit-box-shadow: -1px 1px 4px fade(white,20), 1px -1px 4px @blue-black;
     }
     &.right{
-      text-shadow: 0 0 8px fade(white,90), 2px 2px 2px black;
-    }
+      text-shadow: 0 0 4px fade(white,51310), 2px 2px 2px black;
+      -webkit-box-shadow: 1px 1px 4px fade(white,20), -1px -1px 4px @blue-black;
+  }
 
   }
 }
 
+
+
 #boxShadow{
-  & .mainBar{
-    -webkit-box-shadow: 0px 2px 8px 2px rgba(250,250,250,0.5);
-  }
+
 }
 
 #flex{
@@ -93,4 +97,9 @@
   }
 }
 
-
+.colorbarText(@color){
+  @textColor: lighten(desaturate(@color, 30),18);
+  color: @textColor;
+  border: @textColor solid 1px;
+  text-shadow: 0 0 2px black;
+}
