--- a/client/app/game/game.less
+++ b/client/app/game/game.less
@@ -262,10 +262,12 @@ div#borderscrim {
   background-image: url('../../bmp/borderandscrim_wrn.png');
   z-index: 8;
   pointer-events: none;
+  top:0;
 }
 score-board {
   z-index: 20;
   position: absolute;
+  top:0;
 }
 
 .ggc-video-main{
