--- a/client/app/ggcIcon/ggcIcon.less
+++ b/client/app/ggcIcon/ggcIcon.less
@@ -16,8 +16,10 @@
 }
 
 .iconGroup{
+
   fill: @light-blue;
-  stroke: darken(@light-blue,10);
+
+  stroke: darken(@light-blue,20);
 
   &.energy{
     fill: @energy-color;
@@ -29,4 +31,18 @@
     fill: @economy-color;
   }
 }
+
+.l1{
+  &.energy{
+    fill: @energy-color;
+  }
+  &.environment{
+    fill: @environment-color;
+  }
+  &.economy{
+    fill: @economy-color;
+  }
+}
+
+
 
