transition out from prologue

--- a/client/app/playerPanel/playerPanel.css
+++ b/client/app/playerPanel/playerPanel.css
@@ -165,16 +165,16 @@ div.panelInnerEnergy {
   font-family: "Glyphicons Halflings";
 }
 .score .up {
-  text-shadow: 0 0 10px rgba(255, 255, 255, 0.9), -2px 4px 4px white;
+  text-shadow: 0 0 10px rgba(255, 255, 255, 0.5), -2px 4px 4px rgba(255, 255, 255, 0.5);
 }
 .score .down {
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.9), -2px 4px 4px black;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5), -2px 4px 4px rgba(255, 255, 255, 0.5);
 }
 .score .zilch {
   text-shadow: 0 0 10px rgba(128, 128, 128, 0.9), -2px 4px 4px grey;
 }
 .score .down {
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.9), -2px 4px 4px black;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5), -2px 4px 4px rgba(255, 255, 255, 0.5);
 }
 .score.environment {
   color: #2fd418;
