--- a/client/app/vars.less
+++ b/client/app/vars.less
@@ -71,11 +71,11 @@
 
   }
   &.up {
-    text-shadow: 0 0 10px fade(white, 90), -2px 4px 4px white;
+    text-shadow: 0 0 10px fade(white, 50), -2px 4px 4px fade(white,50);
 
   }
   &.down {
-    text-shadow: 0 0 10px fade(black, 90), -2px 4px 4px black;
+    text-shadow: 0 0 10px fade(black, 50), -2px 4px 4px fade(white, 50);
 
   }
   &.null {
@@ -102,7 +102,7 @@
 
 #boxShadow{
   &.stamp{
-    box-shadow: 0 0 12px  white;
+    box-shadow: 0 0 12px  fade(white,50);
 
   }
 }
