--- a/client/app/game/game.css
+++ b/client/app/game/game.css
@@ -245,7 +245,7 @@ score-board {
   position: absolute;
   top: 30%;
   transform: rotate(30deg);
-  box-shadow: 0 0 12px  white;
+  box-shadow: 0 0 12px rgba(255, 255, 255, 0.5);
   padding: 1em;
   background-color: rgba(0, 0, 0, 0.2);
 }
