--- a/client/app/game/game.css
+++ b/client/app/game/game.css
@@ -18,28 +18,34 @@
 .invisible {
   opacity: 0;
 }
+.scenarioWrap {
+  overflow: hidden;
+  padding: 0 20px 0 30px;
+  margin: 10px;
+  margin-left: 0;
+  -webkit-clip-path: url(#cliphex);
+  background-color: #335e5c;
+  width: 100%;
+  height: 100%;
+}
 .scenario-card {
   -webkit-transition: 1s all;
   -webkit-flex: auto;
   height: 250px;
   width: 550px;
-  background: url("../../svg/infoPanel.svg") no-repeat center;
-  background-size: 580px 850px;
   color: white;
-  padding: 0 20px 0 30px;
-  margin: 10px;
   transform-style: preserve-3d;
-  margin-left: 0;
 }
 .scenario-card.invisible {
   opacity: 0;
 }
 .scenario-card .mainBar {
+  position: relative;
   letter-spacing: 3px;
   text-transform: capitalize;
-  border-radius: .8em;
-  padding: 10px;
-  border: 1px solid #223333;
+  padding: 5px 25% 5px 30%;
+  margin-left: -25%;
+  width: 150%;
   line-height: 1.2em;
   color: white;
 }
