--- a/client/app/playerPanel/playerPanel.less
+++ b/client/app/playerPanel/playerPanel.less
@@ -126,8 +126,6 @@ p.tab-body {
   position:absolute;
   width:375px;
   height:350px;
-  /*top:0px;
-top:220px;*/
 
   top:200px;
 
@@ -141,47 +139,31 @@ top:220px;*/
 
 @font-face {
   font-family: '232MKB';
-  src: url('../../assets/fonts/232MKSD_winTT/232MKB__.TTF') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
-  /*src: url('../fonts/232MKSD_winTT/232MKM__.TTF') format('truetype');  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+  src: url('../../assets/fonts/232MKSD_winTT/232MKB__.TTF') format('truetype');
 }
 
 @font-face {
   font-family: '232MKUL';
-  src: url('../../assets/fonts/232MKSD_winTT/232MKUL_.TTF') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
-  /*src: url('../fonts/232MKSD_winTT/232MKM__.TTF') format('truetype');  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+  src: url('../../assets/fonts/232MKSD_winTT/232MKUL_.TTF') format('truetype');
 }
 
-////
+
 div.topPlane,
 div.bottomPlane {
   position: absolute;
   width: 375px;
   height: 450px;
-  /*opacity:.2;*/
 }
 div.topPlane {
-  /*border:white solid 1px;*/
   background: url("../../svg/paneltop_n.svg") 50% 0 no-repeat;
   -webkit-transform: translateZ(25px);
-  /* Chrome, Safari, Opera */
 }
 div.bottomPlane {
-  /*border:blue solid 1px;*/
   background: url("../../svg/panelbottom_n.svg") 50% 0 no-repeat;
   -webkit-transform: translateZ(10px);
-  /* Chrome, Safari, Opera */
 }
-//div.panelOuterenvironment,
-//div.panelOutereconomy,
-//div.panelOuterenergy {
-//  position: absolute;
-//  width: 375px;
-//  height: 300px;
-//  -webkit-transform-style: preserve-3d;
-//  z-index: 10;
-//  overflow: hidden;
-//  transition: all 0.2s ease-in-out;
-//}
+
+
 div.panelInnerEnvironment,
 div.panelInnerEconomy,
 div.panelInnerEnergy {
@@ -244,6 +226,11 @@ div.panelInnerEnergy {
       transition: all 0.2s ease-in-out;
     }
 
+    &.fullRetract {
+      top:980px;
+      transition: all 0.2s ease-in-out;
+    }
+
 
     & i,a{
       .text-environment;
@@ -266,6 +253,10 @@ div.panelInnerEnergy {
       transition: all 0.2s ease-in-out;
     }
 
+    &.fullRetract {
+      top:1100px;
+      transition: all 0.2s ease-in-out;
+    }
 
     & i,a{
       .text-economy;
@@ -286,6 +277,11 @@ div.panelInnerEnergy {
       right: 310px;
       top: 875px;
       -webkit-transform: rotateZ(-29deg);
+      transition: all 0.2s ease-in-out;
+    }
+
+    &.fullRetract {
+      top:985px;
       transition: all 0.2s ease-in-out;
     }
 
