--- a/client/app/game/game.less
+++ b/client/app/game/game.less
@@ -41,7 +41,6 @@
    height:100%;
  }
 .scenario-card {
-
   -webkit-transition: 1s all;
   -webkit-flex: auto;
   height: 250px;
@@ -50,14 +49,7 @@
   //background: url("../../svg/infoPanel.svg") no-repeat  center ;
   //background-size: 580px 850px;
   color: white;
-
-
-
   transform-style: preserve-3d;
-
-
-
-
   &.invisible{
     opacity: 0;
   }
@@ -82,8 +74,6 @@
     &.environment{
       .bg-environment;
     }
-
-
   }
 
 }
@@ -119,6 +109,9 @@
 #tampa.city { /*background:url(../../svg/citycornerR.svg) 64px -10px /.9em no-repeat; */ }
 img#highways { position: absolute; width: 70.5%; top: 2.5%; left: 18.35%; }
 .scenario-card:nth-of-type(1) {
+  &.clearTransform{
+    transform: perspective(0) rotateY(0) translate(0);
+  }
   & .mainBar{
     #textShadow.card.left;
   }
@@ -144,6 +137,7 @@ img#highways { position: absolute; width: 70.5%; top: 2.5%; left: 18.35%; }
     transform: perspective(1000px) rotateY(0deg) translate(-275px);
   }
 }
+
 
 
 
