--- a/client/app/game/game.less
+++ b/client/app/game/game.less
@@ -36,7 +36,7 @@
    margin: 10px;
    margin-left: 0;
    -webkit-clip-path: url(#cliphex);
-   background-color: @deep-blue;
+   background-color: fade(@deep-blue,85);
    width: 100%;
    height:100%;
  }
