adjusting for site

--- a/client/app/game/game.less
+++ b/client/app/game/game.less
@@ -157,8 +157,7 @@ img#highways { position: absolute; width: 70.5%; top: 2.5%; left: 18.35%; }
   /*src: url('../fonts/232MKSD_winTT/232MKM__.TTF') format('truetype');  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
 body {
-  width: 1920px;
-  height: 1080px;
+
   margin: 0;
 }
 
@@ -168,7 +167,7 @@ body {
 div#ui-main{
   position: relative;
   height: 33%;
-  top: 29%;
+  top: 25%;
 
   & .title{
     line-height: 0;
@@ -205,10 +204,11 @@ div#ui-main{
   }
 }
 div#main {
+  -webkit-transform: scaleY(1.12) scaleX(1.16) translateY(63px);
   position: absolute !important;
   top: 0px;
   width: 1920px;
-  height: 1080px;
+  height: 1200px;
   background: url("../../bmp/gulfbrown.jpg") no-repeat;
   background-size: 1920px 1200px;
   overflow: hidden;
