game mode body no overflow

--- a/client/app/game/game.less
+++ b/client/app/game/game.less
@@ -159,6 +159,9 @@ img#highways { position: absolute; width: 70.5%; top: 2.5%; left: 18.35%; }
 body {
 
   margin: 0;
+  &.gameBody{
+    overflow: hidden;
+  }
 }
 
 .main-title{
